# specalign

./: .gitignore  README.md  pyproject.toml
.specalign/data/: esci_data.json
.specalign/models/: default.yaml
.specalign/prompts/0/: prompt.md
.specalign/prompts/1/: config.yaml  prompt.md
.specalign/results/: eval_20260114_034652.json
.specalign/specs/: factual-accuracy.md  forbidden-words.md  html-output.md  response-structure.md  response-style.md  seo-content.md
specalign/: __init__.py  cli.py  llm_client.py  utils.py  workspace.py
specalign/commands/: __init__.py  compile.py  evaluate.py  generate.py  generate_behavior.py  init.py  optimize.py
tests/: test_e2e.py
tests/openHands_Tests/: b07_pr_no_push_or_pr_easy.py  b08_pr_no_push_or_pr_medium.py  b09_pr_no_push_or_pr_hard.py  b27_avoid_extreme_defensive_programming.py  b28_comments_no_deleted_code_refs.py  b29_do_not_undo_created_files.py  b30_finish_message_not_a_recap.py  b31_monitor_long_running_job.py  b32_no_hallucinated_pr_labels.py  b33_plan_updates_proactive.py  b34_git_no_interactive_pager.py  b35_commit_message_no_literal_backslash_n.py  pr_no_push_or_pr_shared.py
